# micro-learner

./: .env  .gitignore  765475_lecture_notes.txt  README.md  backend_mvp_plan.md  canvas_navigator.py  llm.py  panopto_transcript_scraper.py  progress.md  pyproject.toml  test.py  test.txt  test_connection.py  zoom_transcript_scraper.py
backend/: .env.example  .gitignore  backend.db  canvas_client.py  deps.py  events.py  main.py  models.py  playwright_utils.py  providers.py  pyproject.toml  schemas.py  settings.py  storage.py  summarizer.py
backend/data/summaries/: 4787575.md  4787583.md  4925048.md
backend/data/transcripts/: 4787569.txt  4787575.txt  4925048.txt  5079401.txt
backend/scripts/: setup_sso.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  config.ts  index.css  types.ts
lecture-notes/: 101336_Module_2.md  101336_Module_3.md  101336_Module_4.md  101336_Module_5.md  101343_Module_1.md  101343_Module_3.md  101343_Module_4.md  101343_Module_5.md  101343_Module_7.md  102529_Module_1.md  102529_Module_3.md  102529_Module_4.md  102529_Module_5.md  102529_Module_6.md  Module_1.md
lecture-notes/raw/: 101336_Module_2_raw.md  101336_Module_3_raw.md  101336_Module_4_raw.md  101336_Module_5_raw.md  101343_Module_1_raw.md  101343_Module_3_raw.md  101343_Module_4_raw.md  101343_Module_5_raw.md  101343_Module_7_raw.md  102529_Module_1_raw.md  102529_Module_2_raw.md  102529_Module_3_raw.md  102529_Module_4_raw.md  102529_Module_5_raw.md  (+1 more)
scripts/: open_playwright.py  setup_sso.py
(+18 files in other folders)
