[project]
name = "micro-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "dotenv>=0.9.9",
    "groq>=0.31.0",
    "openai>=1.102.0",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.32.0",
]
